welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: too many arguments for method update: (i: Int, x: Nothing)Unit
      T(n,0)=k
            ^